kubernetes-provisioning/resources/network/cjoc-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    propagate.hnc.x-k8s.io/none: 'true'
  labels:
    app.kubernetes.io/instance: cbci
    app.kubernetes.io/name: cloudbees-core
  name: cjoc-controller-ingress
  namespace: cbci
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          com.cloudbees.cje.type: master
    - namespaceSelector:
        matchExpressions:
          - key: 'controllers.tree.hnc.x-k8s.io/depth'
            operator: Exists
      podSelector:
        matchLabels:
          com.cloudbees.cje.type: master
    ports:
    - port: http
      protocol: TCP
    - port: jnlp
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: cjoc
      app.kubernetes.io/instance: cbci
