kubernetes-provisioning/resources/network/deny-all-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cbci
spec:
  podSelector: {}
  policyTypes:
  - Ingress
